--- a/The_Flavour_Frenzy_WEB/index.html
+++ b/The_Flavour_Frenzy_WEB/index.html
@@ -81,7 +81,7 @@
                 <a href="https://www.twitter.com" class="fa fa fa-twitter text-secondary fa-2xl">Twitter</a>
                 <a href="https://www.linkedin.com" class="fa fa-linkedin text-secondary fa-2xl">LinkedIn</a>
                 <a href="https://www.instagram.com" class="fa fa-instagram text-secondary fa-2xl">Instagram</a>
-                <p>Telephone Number: 02123456789 Email: yum@gmail.com Physical Address: 4 The Street</p>
+                <p>Telephone Number: 02123456789 Email: yumm@gmail.com Physical Address: 4 The Street</p>
                 <div class="p-sm-3"></div>
             </div>
         </footer>
