--- a/The_Flavour_Frenzy_WEB/index.html
+++ b/The_Flavour_Frenzy_WEB/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="Home.html">Food Services!</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="About.html">About Us!</a>
+                <a class="nav-link" href="About.html">The History!/a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Contact.html">Contact Us!</a>
