Changed the Lowercase attribute

--- a/The_Flavour_Frenzy_WEB/index.html
+++ b/The_Flavour_Frenzy_WEB/index.html
@@ -25,14 +25,14 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Home.html">Food Services!</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="About.html">The History!/a>
+              <li class="nav_item">
+                <a class="nav_link" href="About.html">The History!/a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Contact.html">Contact Us!</a>
+              <li class="nav_item">
+                <a class="nav_link" href="Contact.html">Contact Us!</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Shop.html">Shop!</a>
+              <li class="nav_item">
+                <a class="nav_link" href="Shop.html">Shop!</a>
               </li>
             </ul>
           </div>
@@ -46,25 +46,25 @@
                 <center><h2>Bites Range</h2>
                 <p class="ResText">Bites are small, bite-sized pieces of either Chicken, Broccoli or Cheese that are often seasoned or coated with various spices or breading, and typically served as a snack or appetizer. They are a popular and convenient option for those looking for a quick and tasty protein-rich snack.
                 </p>
-                <img src="Images/CheeseBites.jpg" class="img-thumbnail" alt="Responsive image">
+                <img src="Images/CheeseBites.jpg" class="img_thumbnail" alt="Responsive image">
                 <img src="Images/ChickenBites.jpg" class="ResImgMiddle">
-                <img src="Images/BroccoliBites.jpg" class="img-thumbnail" alt="Responsive image">
+                <img src="Images/BroccoliBites.jpg" class="img_thumbnail" alt="Responsive image">
                 </center>
             </div>
             <div>
                 <center><h2>Patties</h2>
                 <p class="OffText">Patties are small, flattened, circular-shaped portions of ground meat, vegetables, or beans that are often seasoned with spices and grilled, baked, or fried. They can be served as a main course or in sandwiches and are a versatile and flavorful option for both vegetarians and meat-lovers alike.
                 </p>
-                <img src="Images/QuaterPounder.jpg" class="img-thumbnail" alt="Responsive image">
+                <img src="Images/QuaterPounder.jpg" class="img_thumbnail" alt="Responsive image">
                 <img src="Images/SouthernPatty.jpg" class="OffImgMiddle">
-                <img src="Images/BeefPatty.jpg" class="img-thumbnail" alt="Responsive image">
+                <img src="Images/BeefPatty.jpg" class="img_thumbnail" alt="Responsive image">
                 </center>
             </div>
             <div>
                 <center><h2>Toppas</h2>
                 <p class="HotText">Toppas are a crispy fried delicacy which is coated with egg wash and breadcrumbs sure to melt in your mouth with each bite
                 </p>
-                <img src="Images/BaconToppa.jpg" class="img-thumbnail" alt="Responsive image">
+                <img src="Images/BaconToppa.jpg" class="img_thumbnail" alt="Responsive image">
                 <img src="Images/LasagnaToppa.jpg" class="HotImgMiddle">
                 <img src="Images/ChickenCordon.jpg" class="HotImgRight">
                 </center>
@@ -74,15 +74,15 @@
         </div>
 
         <footer class="footer">
-            <div class="container-fluid text-center">
-                <div class="p-sm-3"></div>
+            <div class="container_fluid text_center">
+                <div class="p_sm_3"></div>
                 <p>Check out our Socials!</p>
                 <a href="https://www.facebook.com" class="fa fa-facebook text-secondary fa-2xl" >Facebook</a>
                 <a href="https://www.twitter.com" class="fa fa fa-twitter text-secondary fa-2xl">Twitter</a>
                 <a href="https://www.linkedin.com" class="fa fa-linkedin text-secondary fa-2xl">LinkedIn</a>
                 <a href="https://www.instagram.com" class="fa fa-instagram text-secondary fa-2xl">Instagram</a>
                 <p>Telephone Number: 02123456789 Email: yummmmm@gmail.com Physical Address: 4 The Street</p>
-                <div class="p-sm-3"></div>
+                <div class="p_sm_3"></div>
             </div>
         </footer>
 
