Fixed HTML Errors

--- a/The_Flavour_Frenzy_WEB/index.html
+++ b/The_Flavour_Frenzy_WEB/index.html
@@ -20,13 +20,13 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <center>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarnav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Home.html">Food Services!</a>
               </li>
               <li class="nav_item">
-                <a class="nav_link" href="About.html">The History!/a>
+                <a class="nav_link" href="About.html">The History!</a>
               </li>
               <li class="nav_item">
                 <a class="nav_link" href="Contact.html">Contact Us!</a>
@@ -44,29 +44,29 @@
            
             <div>
                 <center><h2>Bites Range</h2>
-                <p class="ResText">Bites are small, bite-sized pieces of either Chicken, Broccoli or Cheese that are often seasoned or coated with various spices or breading, and typically served as a snack or appetizer. They are a popular and convenient option for those looking for a quick and tasty protein-rich snack.
+                <p class="restext">Bites are small, bite-sized pieces of either Chicken, Broccoli or Cheese that are often seasoned or coated with various spices or breading, and typically served as a snack or appetizer. They are a popular and convenient option for those looking for a quick and tasty protein-rich snack.
                 </p>
                 <img src="Images/CheeseBites.jpg" class="img_thumbnail" alt="Responsive image">
-                <img src="Images/ChickenBites.jpg" class="ResImgMiddle">
+                <img src="Images/ChickenBites.jpg" class="resmmgdiddle" alt="Responsive image">
                 <img src="Images/BroccoliBites.jpg" class="img_thumbnail" alt="Responsive image">
                 </center>
             </div>
             <div>
                 <center><h2>Patties</h2>
-                <p class="OffText">Patties are small, flattened, circular-shaped portions of ground meat, vegetables, or beans that are often seasoned with spices and grilled, baked, or fried. They can be served as a main course or in sandwiches and are a versatile and flavorful option for both vegetarians and meat-lovers alike.
+                <p class="offtext">Patties are small, flattened, circular-shaped portions of ground meat, vegetables, or beans that are often seasoned with spices and grilled, baked, or fried. They can be served as a main course or in sandwiches and are a versatile and flavorful option for both vegetarians and meat-lovers alike.
                 </p>
                 <img src="Images/QuaterPounder.jpg" class="img_thumbnail" alt="Responsive image">
-                <img src="Images/SouthernPatty.jpg" class="OffImgMiddle">
+                <img src="Images/SouthernPatty.jpg" class="offimgmiddle" alt="Responsive image">
                 <img src="Images/BeefPatty.jpg" class="img_thumbnail" alt="Responsive image">
                 </center>
             </div>
             <div>
                 <center><h2>Toppas</h2>
-                <p class="HotText">Toppas are a crispy fried delicacy which is coated with egg wash and breadcrumbs sure to melt in your mouth with each bite
+                <p class="hottext">Toppas are a crispy fried delicacy which is coated with egg wash and breadcrumbs sure to melt in your mouth with each bite
                 </p>
                 <img src="Images/BaconToppa.jpg" class="img_thumbnail" alt="Responsive image">
-                <img src="Images/LasagnaToppa.jpg" class="HotImgMiddle">
-                <img src="Images/ChickenCordon.jpg" class="HotImgRight">
+                <img src="Images/LasagnaToppa.jpg" class="hotimgmiddle" alt="Responsive image">
+                <img src="Images/ChickenCordon.jpg" class="hotimgright" alt="Responsive image">
                 </center>
             </div>
         
