--- a/The_Flavour_Frenzy_WEB/index.html
+++ b/The_Flavour_Frenzy_WEB/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="About.html">The History!</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contact.html">Contact Us!</a>
+                <a class="nav-link" href="Contact.html">Reach out to us!</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Shop.html">Shop!</a>
